tests/cli/checks/err_syntax.check.txt
error[KEI-E0104]: unknown clause 'use': contract clauses are 'uses', 'requires', and 'ensures'
 --> tests/cli/checks/err_syntax.kei:4:3
  |
4 |   use Database.Write
  |   ^^^
  = fix: Replace 'use' with 'uses'

